--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <hl>Hello World</hl>
+    <h1>Hello World</h1>
 
     {% block content %}
     <!--this is where all our code goes-->
