--- a/pages/templates/detail.html
+++ b/pages/templates/detail.html
@@ -1,3 +1,5 @@
+<!--whenever you extend a page, put it in single quotes-->
+<!--it displays the blog post, unique for each!-->
 {% extends 'base.html' %}
 
 {% block content %}
