--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -3,7 +3,9 @@
 {% block content %}
 
     {% for post in posts %}
-        <!--you pass the unique link with the pk so that you can click on the post to see the content in the detail page, you go to that speciifc page for that post-->
+        <!--you pass the unique link with the pk so that you can click on the post to see the content in the detail page, 
+        you go to that speciifc page for that post-->
+        <!--go to the wesbite url called detail and pass the pk to it to get the specific unique post-->
         <a href = "{% url 'detail' post.pk %}">{{post.title}}</a>
         {{post.date}}
     {% endfor %}
