--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -2,21 +2,23 @@
 
 {% block content %}
 
-    {% for post in posts %}
+    <div class = "row row-cols-3">
+      {% for post in posts %}
         <!--you pass the unique link with the pk so that you can click on the post to see the content in the detail page, 
         you go to that speciifc page for that post-->
         <!--go to the wesbite url called detail and pass the pk to it to get the specific unique post-->
-        <a href = "{% url 'detail' post.pk %}">{{post.title}}</a>
-        <div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">{{post.title}}</h5>
-    <h6 class="card-subtitle mb-2 text-body-secondary"> {{post.date}}</h6>
-    <a href = "{% url 'detail' post.pk %}" class="card-link">Read Post</a>
-  </div>
-</div>
-
-
-
+        <!--add the bootstrap styling-->
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+            <h5 class="card-title">{{post.title}}</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary"> {{post.date}}</h6>
+            <a href = "{% url 'detail' post.pk %}" class="card-link">Read Post</a>
+            </div>
+          </div>
+        </div>
     {% endfor %}
+
+    </div>
 
 {% endblock %}
