--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -7,23 +7,28 @@
     <title>Vedika's Blog</title>
     <!--the next line brings in bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <style>
+      /*adding css here!*/
+      
+    </style>
   </head>
+
   <body>
     <hr>
     <!--to go back to home page, use home because in the urls.py, you defined the path to be just homes-->
-    <a href = "{% url 'home' %}"><h1 class = "text-center text-primary" style = "text-decoration none">Vedika's Blog</h1></a>
+    <a href = "{% url 'home' %}" class="link-underline link-underline-opacity-0"><h1 class = "text-center text-success">Vedika's Blog</h1></a>
     <hr>
 
     <div class="d-flex justify-content-center">
       <input type="checkbox" id="checkbox">
-      <label style="margin-right:5px" for="mycheckbox">Dark Mode</label>
+      <label for="mycheckbox">Dark Mode</label>
     </div>
     <br>
 
     <div class = "container">
     {% block content %}
     <!--this is where all our code goes-->
+    <!--all the posts are loaded here, the stuff in home.html-->
     {% endblock %}
     </div>
 
