--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -13,7 +13,7 @@
             <div class="card-body">
             <h5 class="card-title">{{post.title}}</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary"> {{post.date}}</h6>
-            <a href = "{% url 'detail' post.pk %}" class="card-link btn btn-primary">Read Post</a>
+            <a href = "{% url 'detail' post.pk %}" class="card-link btn btn-success">Read Post</a>
             </div>
           </div>
         </div>
