--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="htmlPage" data-bs-theme="light">
+<html lang="en" id="htmlPage">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +7,14 @@
     <title>Vedika's Blog</title>
     <!--the next line brings in bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    
+    <!--adding css here!-->
     <style>
-      /*adding css here!*/
-      
+      body{
+        
+      }
     </style>
+
   </head>
 
   <body>
