--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -7,13 +7,8 @@
     <title>Vedika's Blog</title>
     <!--the next line brings in bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    
-    <!--adding css here!-->
-    <style>
-      body{
-        
-      }
-    </style>
+    <!--putting it after the bootstrap line will make the css file override the bootstrap-->
+    <link rel="stylesheet" href="./style.css">
 
   </head>
 
