--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" id="htmlPage">
   <head>
@@ -8,7 +9,7 @@
     <!--the next line brings in bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!--putting it after the bootstrap line will make the css file override the bootstrap-->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 
   </head>
 
@@ -18,12 +19,6 @@
     <a href = "{% url 'home' %}" class="link-underline link-underline-opacity-0"><h1 class = "text-center text-success">Vedika's Blog</h1></a>
     <hr>
 
-    <div class="d-flex justify-content-center">
-      <input type="checkbox" id="checkbox">
-      <label for="mycheckbox">Dark Mode</label>
-    </div>
-    <br>
-
     <div class = "container">
     {% block content %}
     <!--this is where all our code goes-->
@@ -32,19 +27,8 @@
     </div>
 
     <script>
-      page = document.getElementById("htmlPage");
-      checkbox = document.getElementById("checkbox");
-
-      checkbox.addEventListener("change", enableDarkMode);
-
-      function enableDarkMode(){
-          if(checkbox.checked){
-              page.setAttribute("data-bs-theme", "dark");
-          }
-          else{
-              page.setAttribute("data-bs-theme", "light");
-          }
-      }
+      
     </script>
+
   </body>
 </html>
