--- a/pages/static/style.css
+++ b/pages/static/style.css
@@ -1,10 +1,10 @@
 
-:root{
+/*:root{
     --summer:lightblue;
     --fall:peachpuff;
     --winter:whitesmoke;
     --spring:lightpink;
-}
+}*/
 
 body{
     font-family:monaco;
@@ -17,13 +17,12 @@ header{
     padding:20px;
 }
 
-/*use . for classes and # for ids*/
+/*use . for classes and # for ids
 .theme-switches{
     display:flex;
     justify-content: center;
 }
 
-/*this is what styles those boxes on the screen*/
 .switch{
     height:30px;
     width:30px;
@@ -43,4 +42,4 @@ header{
 }
 #theme4{
     background-color: var(--spring);
-}
+}*/
