--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -9,9 +9,7 @@
     <!--the next line brings in bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!--putting it after the bootstrap line will make the css file override the bootstrap-->
-    <!--this next stylesheet is the sylesheet we switch to-->
-    <link rel="stylesheet" id="switcher-id" href="">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link id="theme" rel="stylesheet" href="{% static 'style.css' %}">
     <script src="{% static 'script.js' %}" defer></script>
   </head>
 
@@ -22,12 +20,18 @@
     <hr>
   
     <header>
-      <div class="theme-switches">
-        <div data-theme="summer" class="switch" id="theme1"></div>
-        <div data-theme="fall" class="switch" id="theme2"></div>
-        <div data-theme="winter" class="switch" id="theme3"></div>
-        <div data-theme="spring" class="switch" id="theme4"></div>
+      <div>
+        <button onclick="toggleTheme('summer.css')">Summer</button>
+        <button onclick="toggleTheme('fall.css')">Fall</button>
+        <button onclick="toggleTheme('winter.css')">Winter</button>
+        <button onclick="toggleTheme('spring.css')">Spring</button>
       </div>
+      <!--<div class="theme-switches">
+        <button data-theme="summer" class="switch" id="theme1"></button>
+        <button data-theme="fall" class="switch" id="theme2"></button>
+        <button data-theme="winter" class="switch" id="theme3"></button>
+        <button data-theme="spring" class="switch" id="theme4"></button>
+      </div>-->
     </header>
 
     <div class = "container">
