--- a/pages/static/summer.css
+++ b/pages/static/summer.css
@@ -1,3 +1,41 @@
-body{
-    background-color:lightblue;
+html,body{
+    font-family:monaco;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100%;
+}
+
+/*the theme switcher stuff is in the header*/
+header{
+    text-align:center;
+    font-size:30px;
+    padding:20px;
+}
+
+.container1{
+    position:absolute;
+    width:100%;
+    height:100%;
+    /*image for free from vecteezy*/
+    background:url(https://static.vecteezy.com/system/resources/thumbnails/020/580/331/small/abstract-smooth-blur-blue-color-gradient-mesh-texture-lighting-effect-background-with-blank-space-for-website-banner-and-paper-card-decorative-modern-graphic-design-vector.jpg);
+    background-size: 100% 100%;
+    /*overflow hidden prevents scrolling so image covers whole page*/
+    overflow:hidden;
+}
+
+.cloud{
+    position:absolute;
+    width:100%;
+    height:100%;
+    /*image for free from yopriceville gallery*/
+    background:url(https://gallery.yopriceville.com/var/resizes/Free-Clipart-Pictures/Cloud-PNG/Fluffy_Cloud_Large_Transparent_Image.png?m=1629830703);
+    animation:animate 120s linear infinite;
+    background-size: 100% auto;
+    padding:30px;
+}
+
+@keyframes animate{
+    0%{background-position:0px;}
+   100%{background-position:8000px;}
 }
