--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -33,21 +33,20 @@
     </header>
 
       <div class="cloud">
-        <!--container is only used by styles.css for the basic styling. container1 does the background for summer-->
-        <!--cloud has the special effects for summer, does not include the buttons in the header-->
-        <section>
-          <!--section is for fall-->
-        <div class = "container">
-          {% block content %}
-          <!--this is where all our code goes-->
-          <!--all the posts are loaded here, the stuff in home.html-->
+        <!--these leaf divs are used to animate the leaves for fall-->
+        <!--since they are not part of conainter, the blog posts aren't affected by the animations-->
           <div class="leaf1"></div>
           <div class="leaf2"></div>
           <div class="leaf3"></div>
           <div class="leaf4"></div>
+        <!--container is only used by styles.css for the basic styling. container1 does the background for summer-->
+        <!--cloud has the special effects for summer and fall-->
+        <div class = "container">
+          {% block content %}
+          <!--this is where all our code goes-->
+          <!--all the posts are loaded here, the stuff in home.html-->
           {% endblock %}
         </div>
-      </section>
     </div>
   </div>
 
