added snowflake images for winter animation, started winter animations

--- a/pages/static/winter.css
+++ b/pages/static/winter.css
@@ -1,3 +1,145 @@
-body{
-    background-color:whitesmoke;
+body {
+    font-family: monaco;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100%;
+    color: black;
+}
+
+header {
+    text-align: center;
+    font-size: 30px;
+    padding:20px;
+}
+
+
+.container1 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(https://img.freepik.com/free-vector/unfocussed-winter-background-with-snowflakes_1393-271.jpg?semt=ais_incoming&w=740&q=80);
+    background-size: 100% 100%;
+    overflow: hidden;
+    z-index: 1; 
+}
+
+
+.cloud {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+/*in this case, the leaves will be snowflakes, since I did fall first, it's just called leaf
+might change name later*/
+.leaf1, .leaf2, .leaf3, .leaf4 {
+    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 2;  
+}
+
+
+.leaf1 {
+    top: 10%;
+    left: 20%;
+    width: 100px;
+    height: 100px;
+    background-image: url(https://png.pngtree.com/png-vector/20230831/ourmid/pngtree-3d-rendering-snowflake-isolated-png-image_9192400.png);
+    animation: animateLeaf1 15s linear infinite;
+}
+
+/* Leaf 2 */
+.leaf2 {
+    top: 30%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    background-image: url(https://png.pngtree.com/png-vector/20230915/ourmid/pngtree-illustration-of-3d-snowflake-png-image_10076165.png);
+    animation: animateLeaf2 20s linear infinite;
+}
+
+/* Leaf 3 */
+.leaf3 {
+    top: 50%;
+    left: 70%;
+    width: 120px;
+    height: 120px;
+    background-image: url(https://png.pngtree.com/png-clipart/20250103/original/pngtree-blue-snowflake-clipart-illustration-winter-element-png-image_19713260.png);
+    animation: animateLeaf3 18s linear infinite;
+}
+
+/* Leaf 4 */
+.leaf4 {
+    top: 20%;
+    left: 0%;
+    width: 100px;
+    height: 100px;
+    background-image: url(https://cdn.creazilla.com/cliparts/70043/snowflake-clipart-original.png);
+    animation: animateLeaf4 12s linear infinite;
+}
+
+
+@keyframes animateLeaf1 {
+    0% {
+        top: -10%;
+        transform: translateX(20px) rotate(0deg);
+    }
+    100% {
+        top: 110%;
+        transform: translateX(-20px) rotate(180deg);
+    }
+}
+
+@keyframes animateLeaf2 {
+    0% {
+        opacity: 0.2;
+        top: -10%;
+        transform: translateX(30px) rotate(0deg);
+    }
+    100% {
+        opacity: 1;
+        top: 110%;
+        transform: translateX(-30px) rotate(180deg);
+    }
+}
+
+@keyframes animateLeaf3 {
+    0% {
+        opacity: 0.2;
+        top: -10%;
+        transform: translateX(40px) rotate(0deg);
+    }
+    100% {
+        opacity: 1;
+        top: 110%;
+        transform: translateX(-40px) rotate(180deg);
+    }
+}
+
+@keyframes animateLeaf4 {
+    0% {
+        opacity: 0.2;
+        top: -10%;
+        transform: translateX(50px) rotate(0deg);
+    }
+    100% {
+        opacity: 1;
+        top: 110%;
+        transform: translateX(-50px) rotate(180deg);
+    }
+}
+
+/*blog content above leaves, z index 3*/
+.container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: auto;
+    z-index: 3; 
+    /*overflow: auto;*/
 }
