--- a/pages/static/winter.css
+++ b/pages/static/winter.css
@@ -18,7 +18,8 @@ header {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url(https://img.freepik.com/free-vector/unfocussed-winter-background-with-snowflakes_1393-271.jpg?semt=ais_incoming&w=740&q=80);
+    background:url(https://media.istockphoto.com/id/1066960598/photo/winter-holiday-background-with-snow-copy-space.jpg?s=612x612&w=0&k=20&c=KjOIp2ns1988noHZXBT8DbS3fOlhd_GXSHsoO7vtAeE=);
+    /*background: url(https://img.freepik.com/free-vector/unfocussed-winter-background-with-snowflakes_1393-271.jpg?semt=ais_incoming&w=740&q=80);*/
     background-size: 100% 100%;
     overflow: hidden;
     z-index: 1; 
