--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -39,6 +39,8 @@
           <div class="leaf2"></div>
           <div class="leaf3"></div>
           <div class="leaf4"></div>
+          <div class="leaf5"></div>
+          <div class="leaf6"></div>
         <!--container is only used by styles.css for the basic styling. container1 does the background for summer-->
         <!--cloud has the special effects for summer and fall-->
         <div class = "container">
