--- a/pages/static/spring.css
+++ b/pages/static/spring.css
@@ -1,3 +1,118 @@
-body{
-    background-color:lightpink;
+body {
+    font-family: monaco;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100%;
+    color: black;
+}
+
+header {
+    text-align: center;
+    font-size: 30px;
+    padding:20px;
+}
+
+/*the z-index just places it at the very bottom so it'll be under the leaves, otherwise everything is the same as summer*/
+/*the absolute makes it so it doesn't interfere with the leaves or blog posts?*/
+.container1 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(https://img2.wallspic.com/previews/0/0/0/0/4/140000/140000-grass_family-cover_art-grass-plant-spring-x750.jpg);
+    background-size: 100% 100%;
+    overflow: hidden;
+    z-index: 1; 
+}
+
+
+.cloud {
+    position: absolute;
+    bottom:40px;
+    width:6px;
+    height: 100px;
+    transform-origin:bottom;
+    background-color:#5f8011;
+    z-index:2;
+}
+
+.cloud--1{
+    Left:50%;
+    animation: treeGrows 4s linear;
+}
+
+.leaf{
+    position:absolute;
+    width:20px;
+    height:20px;
+    z-index:2;
+    background-color:#5f8011;
+    border:0;
+    border-top-right-radius:100%;
+    border-bottom-left-radius:100%;
+}
+
+
+.leaf1 {
+    top: -19px;
+    left: -17px;
+    width: 20px;
+    height: 20px;
+    z-index:2;
+}
+
+
+.leaf2 {
+    top: -19px;
+    left: -17px;
+    width: 20px;
+    height: 20px;
+    transform:rotate(90deg);
+    z-index:2;
+}
+
+.leaf3 {
+    top: 20px;
+    left: -30px;
+    z-index:2;
+}
+
+.leaf4 {
+    top: 40px;
+    left: -30px;
+    transform:rotate(90deg);
+    z-index:2;
+}
+
+
+@keyframes treeGrows {
+    0% {
+        transform:scale(1);
+    }
+    15% {
+        transform:scale(1.5);
+    }
+    40% {
+        transform:scale(2);
+    }
+    65% {
+        transform:scale(2.5);
+    }
+    90%{
+        transform:scale(3);
+    }
+    100%{
+        transform:scale(3);
+    }
+}
+
+.container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: auto;
+    z-index: 3; 
+    overflow: auto;
 }
