--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -32,17 +32,17 @@
       </div>
     </header>
 
-      <div class="cloud">
+      <div class="cloud cloud--1">
         <!--these leaf divs are used to animate the leaves for fall-->
         <!--since they are not part of conainter, the blog posts aren't affected by the animations-->
-          <div class="leaf1"></div>
-          <div class="leaf2"></div>
-          <div class="leaf3"></div>
-          <div class="leaf4"></div>
-          <div class="leaf5"></div>
-          <div class="leaf6"></div>
+          <div class="leaf leaf1"></div>
+          <div class="leaf leaf2"></div>
+          <div class="leaf leaf3"></div>
+          <div class="leaf leaf4"></div>
+          <div class="leaf leaf5"></div>
+          <div class="leaf leaf6"></div>
         <!--container is only used by styles.css for the basic styling. container1 does the background for summer-->
-        <!--cloud has the special effects for summer and fall-->
+        <!--cloud has the special effects for summer and fall and winter-->
         <div class = "container">
           {% block content %}
           <!--this is where all our code goes-->
