working on plant animation, fixing properties so it doesn't interfere with blog post

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -32,7 +32,7 @@
       </div>
     </header>
 
-      <div class="cloud cloud--1">
+      <div class="cloud">
         <!--these leaf divs are used to animate the leaves for fall-->
         <!--since they are not part of conainter, the blog posts aren't affected by the animations-->
           <div class="leaf leaf1"></div>
