--- a/pages/static/spring.css
+++ b/pages/static/spring.css
@@ -16,7 +16,7 @@ header {
 /*the z-index just places it at the very bottom so it'll be under the leaves, otherwise everything is the same as summer*/
 /*the absolute makes it so it doesn't interfere with the leaves or blog posts?*/
 .container1 {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background: url(https://img2.wallspic.com/previews/0/0/0/0/4/140000/140000-grass_family-cover_art-grass-plant-spring-x750.jpg);
@@ -29,16 +29,13 @@ header {
 .cloud {
     position: absolute;
     bottom:40px;
-    width:6px;
+    width:60px;
     height: 100px;
     transform-origin:bottom;
     background-color:#5f8011;
     z-index:2;
-}
-
-.cloud--1{
     Left:50%;
-    animation: treeGrows 4s linear;
+    animation: treeGrows 4s linear infinite;
 }
 
 .leaf{
@@ -107,7 +104,7 @@ header {
 }
 
 .container {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
