--- a/pages/static/spring.css
+++ b/pages/static/spring.css
@@ -5,10 +5,113 @@ body {
     height: 100vh;
     width: 100%;
     color: black;
-    position: relative; /* Ensure body is the reference point for absolute positioning */
+    position: relative; 
 }
 
-/* The background container (keeping it fixed) */
+.container1 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(https://img2.wallspic.com/previews/0/0/0/0/4/140000/140000-grass_family-cover_art-grass-plant-spring-x750.jpg);
+    background-size: 100% 100%;
+    overflow: hidden;
+    z-index: 1; 
+}
+
+
+.cloud {
+    position: absolute;
+    bottom:40px;
+    width:60px;
+    height: 100px;
+    transform-origin:bottom;
+    background-color:#5f8011;
+    z-index:3;
+    Left:50%;
+    animation: treeGrows 4s linear infinite;
+}
+
+.leaf{
+    position:absolute;
+    width:20px;
+    height:20px;
+    z-index:3;
+    background-color:#5f8011;
+    border:0;
+    border-top-right-radius:100%;
+    border-bottom-left-radius:100%;
+}
+
+
+.leaf1 {
+    top: -19px;
+    left: -17px;
+    width: 20px;
+    height: 20px;
+    z-index:3;
+}
+
+
+.leaf2 {
+    top: -19px;
+    left: -17px;
+    width: 20px;
+    height: 20px;
+    transform:rotate(90deg);
+    z-index:3;
+}
+
+.leaf3 {
+    top: 20px;
+    left: -30px;
+    z-index:3;
+}
+
+.leaf4 {
+    top: 40px;
+    left: -30px;
+    transform:rotate(90deg);
+    z-index:3;
+}
+
+
+@keyframes treeGrows {
+    0% {
+        transform:scale(1);
+    }
+    15% {
+        transform:scale(1.5);
+    }
+    40% {
+        transform:scale(2);
+    }
+    65% {
+        transform:scale(2.5);
+    }
+    90%{
+        transform:scale(3);
+    }
+    100%{
+        transform:scale(3);
+    }
+}
+header {
+    text-align: center;
+    font-size: 30px;
+    padding:20px;
+}
+
+.container {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 2; 
+}
+
+/*
 .container1 {
     position: absolute;
     width: 100%;
@@ -19,12 +122,12 @@ body {
     z-index: 1; 
 }
 
-/* Tree animation */
+
 .tree {
     position: absolute;
     bottom: 40px;
-    left: 50%; /* This will center the tree horizontally */
-    transform: translateX(-50%); /* Center tree horizontally */
+    left: 50%; 
+    transform: translateX(-50%);
     width: 60px;
     height: 100px;
     transform-origin: bottom;
@@ -33,7 +136,7 @@ body {
     animation: treeGrows 4s linear infinite;
 }
 
-/* Leaf positioning */
+
 .leaf {
     position: absolute;
     width: 20px;
@@ -50,7 +153,7 @@ body {
 .leaf3 { top: 20px; left: -30px; }
 .leaf4 { top: 40px; left: -30px; transform: rotate(90deg); }
 
-/* Keyframe for the tree growth animation */
+
 @keyframes treeGrows {
     0% {
         transform: scale(1);
@@ -72,115 +175,17 @@ body {
     }
 }
 
-/* Container holding the blog posts */
+
 .container {
     position: relative;
     z-index: 2;
     padding-top: 20px;
 }
 
-/* Header for the theme switcher */
 header {
     text-align: center;
     font-size: 30px;
     padding: 20px;
-}
-
-button {
-    margin: 5px;
-}
-
-
-
-
-/*body {
-    font-family: monaco;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 100%;
-    color: black;
-    position: relative; 
-}
-
-
-.container1 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url(https://img2.wallspic.com/previews/0/0/0/0/4/140000/140000-grass_family-cover_art-grass-plant-spring-x750.jpg);
-    background-size: 100% 100%;
-    overflow: hidden;
-    z-index: 1; 
-}
-
-
-.tree {
-    position: absolute;
-    bottom: 40px;
-    left: 50%;
-    width: 60px;
-    height: 100px;
-    transform-origin: bottom;
-    background-color: #5f8011;
-    z-index: 2;
-    animation: treeGrows 4s linear infinite;
-    transform: translateX(-50%); 
-}
-
-
-.leaf {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    z-index: 2;
-    background-color: #5f8011;
-    border: 0;
-    border-top-right-radius: 100%;
-    border-bottom-left-radius: 100%;
-}
-
-.leaf1 { top: -19px; left: -17px; }
-.leaf2 { top: -19px; left: -17px; transform: rotate(90deg); }
-.leaf3 { top: 20px; left: -30px; }
-.leaf4 { top: 40px; left: -30px; transform: rotate(90deg); }
-
-
-@keyframes treeGrows {
-    0% { transform: scale(1); }
-    15% { transform: scale(1.5); }
-    40% { transform: scale(2); }
-    65% { transform: scale(2.5); }
-    90% { transform: scale(3); }
-    100% { transform: scale(3); }
-}
-
-
-.container {
-    position: relative; 
-    z-index: 3;
-    padding-top: 20px;
-}
-
-
-header {
-    text-align: center;
-    font-size: 30px;
-    padding: 20px;
-}
-
-button {
-    margin: 5px;
-}
-
-.container1 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url(https://img2.wallspic.com/previews/0/0/0/0/4/140000/140000-grass_family-cover_art-grass-plant-spring-x750.jpg);
-    background-size: cover;
-    overflow: hidden;
-    z-index: 1;
 }*/
 
 
