--- a/pages/static/spring.css
+++ b/pages/static/spring.css
@@ -18,289 +18,134 @@ body {
     z-index: 1; 
 }
 
-
-.cloud {
-    position: absolute;
-    bottom:40px;
-    width:60px;
-    height: 100px;
-    transform-origin:bottom;
-    background-color:#5f8011;
-    z-index:3;
-    Left:50%;
-    animation: treeGrows 4s linear infinite;
-}
-
-.leaf{
-    position:absolute;
-    width:20px;
-    height:20px;
-    z-index:3;
-    background-color:#5f8011;
-    border:0;
-    border-top-right-radius:100%;
-    border-bottom-left-radius:100%;
-}
-
-
-.leaf1 {
-    top: -19px;
-    left: -17px;
-    width: 20px;
-    height: 20px;
-    z-index:3;
-}
-
-
-.leaf2 {
-    top: -19px;
-    left: -17px;
-    width: 20px;
-    height: 20px;
-    transform:rotate(90deg);
-    z-index:3;
-}
-
-.leaf3 {
-    top: 20px;
-    left: -30px;
-    z-index:3;
-}
-
-.leaf4 {
-    top: 40px;
-    left: -30px;
-    transform:rotate(90deg);
-    z-index:3;
-}
-
-
-@keyframes treeGrows {
-    0% {
-        transform:scale(1);
-    }
-    15% {
-        transform:scale(1.5);
-    }
-    40% {
-        transform:scale(2);
-    }
-    65% {
-        transform:scale(2.5);
-    }
-    90%{
-        transform:scale(3);
-    }
-    100%{
-        transform:scale(3);
-    }
-}
 header {
     text-align: center;
     font-size: 30px;
     padding:20px;
 }
 
-.container {
+.cloud {
     position: relative;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 2; 
-}
-
-/*
-.container1 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url(https://img2.wallspic.com/previews/0/0/0/0/4/140000/140000-grass_family-cover_art-grass-plant-spring-x750.jpg);
-    background-size: cover;
+    height: 100vh;
     overflow: hidden;
-    z-index: 1; 
+}
+
+/*the leaf animations are on top of the background, z index 2 - higher index = on top of lower index
+the absolute position makes them posiiton relative to their closest ancestor, the cloud, ensuring they can move freely in it
+it takes them out of the regular document flow so it doesn't affect the layout of other elements
+the background size contain makes them fit the whole div without distortion
+no repeat makes sures the image only appears once and not many times if it doesn't fit the div
+the centering places the image of the leaf in the middle of the div - not really needed?*/
+.leaf1, .leaf2, .leaf3, .leaf4 {
+    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 2;  
 }
 
 
-.tree {
-    position: absolute;
-    bottom: 40px;
-    left: 50%; 
-    transform: translateX(-50%);
-    width: 60px;
+.leaf1 {
+    top: 10%;
+    left: 20%;
+    width: 100px;
     height: 100px;
-    transform-origin: bottom;
-    background-color: #5f8011;
-    z-index: 3;
-    animation: treeGrows 4s linear infinite;
+    background-image: url(https://www.pngkey.com/png/full/930-9306416_autumn-leaves-clipart-chinar-autumn-maple-leaf-png.png);
+    animation: animateLeaf1 10s linear infinite;
 }
 
-
-.leaf {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: #5f8011;
-    border: 0;
-    border-top-right-radius: 100%;
-    border-bottom-left-radius: 100%;
-    z-index: 4;
+/* Leaf 2 */
+.leaf2 {
+    top: 30%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    background-image: url(https://assets.simpleviewinc.com/simpleview/image/upload/c_mpad,q_75,w_297/v1/clients/newyorkstate/hornbeam_da192ef6-6ce2-428f-88ae-30afc9cccdeb.png);
+    animation: animateLeaf2 20s linear infinite;
 }
 
-.leaf1 { top: -19px; left: -17px; }
-.leaf2 { top: -19px; left: -17px; transform: rotate(90deg); }
-.leaf3 { top: 20px; left: -30px; }
-.leaf4 { top: 40px; left: -30px; transform: rotate(90deg); }
+/* Leaf 3 */
+.leaf3 {
+    top: 50%;
+    left: 70%;
+    width: 120px;
+    height: 120px;
+    background-image: url(https://png.pngtree.com/png-clipart/20210905/original/pngtree-autumn-falling-leaves-fall-png-image_6695950.jpg);
+    animation: animateLeaf3 18s linear infinite;
+}
 
+/* Leaf 4 */
+.leaf4 {
+    top: 20%;
+    left: 0%;
+    width: 100px;
+    height: 100px;
+    background-image: url(https://dejpknyizje2n.cloudfront.net/media/carstickers/versions/fall-leaves-autumn-season-watercolor-illustration-sticker-u1e1f-x450.png);
+    animation: animateLeaf4 7s linear infinite;
+}
 
-@keyframes treeGrows {
+/* each leaf animated seperately, opacity from 0 to 1(fully visible)*/
+/*animating each leaf separetely doesn't affect the background and the blog posts which are in container1 and container respecitively*/
+@keyframes animateLeaf1 {
     0% {
-        transform: scale(1);
-    }
-    15% {
-        transform: scale(1.5);
-    }
-    40% {
-        transform: scale(2);
-    }
-    65% {
-        transform: scale(2.5);
-    }
-    90% {
-        transform: scale(3);
+        opacity: 0.3;
+        top: -10%;
+        transform: translateX(20px) rotate(0deg);
     }
     100% {
-        transform: scale(3);
+        opacity: 1;
+        top: 110%;
+        transform: translateX(-20px) rotate(180deg);
     }
 }
 
-
-.container {
-    position: relative;
-    z-index: 2;
-    padding-top: 20px;
-}
-
-header {
-    text-align: center;
-    font-size: 30px;
-    padding: 20px;
-}*/
-
-
-
-
-/*body {
-    font-family: monaco;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 100%;
-    color: black;
-    position:relative;
-}
-
-header {
-    text-align: center;
-    font-size: 30px;
-    padding:20px;
-}
-
-.container1 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url(https://img2.wallspic.com/previews/0/0/0/0/4/140000/140000-grass_family-cover_art-grass-plant-spring-x750.jpg);
-    background-size: 100% 100%;
-    overflow: hidden;
-    z-index: 1; 
-}
-
-
-.cloud {
-    position: absolute;
-    bottom:40px;
-    width:60px;
-    height: 100px;
-    transform-origin:bottom;
-    background-color:#5f8011;
-    z-index:2;
-    Left:50%;
-    animation: treeGrows 4s linear infinite;
-}
-
-.leaf{
-    position:absolute;
-    width:20px;
-    height:20px;
-    z-index:2;
-    background-color:#5f8011;
-    border:0;
-    border-top-right-radius:100%;
-    border-bottom-left-radius:100%;
-}
-
-
-.leaf1 {
-    top: -19px;
-    left: -17px;
-    width: 20px;
-    height: 20px;
-    z-index:2;
-}
-
-
-.leaf2 {
-    top: -19px;
-    left: -17px;
-    width: 20px;
-    height: 20px;
-    transform:rotate(90deg);
-    z-index:2;
-}
-
-.leaf3 {
-    top: 20px;
-    left: -30px;
-    z-index:2;
-}
-
-.leaf4 {
-    top: 40px;
-    left: -30px;
-    transform:rotate(90deg);
-    z-index:2;
-}
-
-
-@keyframes treeGrows {
+@keyframes animateLeaf2 {
     0% {
-        transform:scale(1);
+        opacity: 0.3;
+        top: -10%;
+        transform: translateX(30px) rotate(0deg);
     }
-    15% {
-        transform:scale(1.5);
-    }
-    40% {
-        transform:scale(2);
-    }
-    65% {
-        transform:scale(2.5);
-    }
-    90%{
-        transform:scale(3);
-    }
-    100%{
-        transform:scale(3);
+    100% {
+        opacity: 1;
+        top: 110%;
+        transform: translateX(-30px) rotate(180deg);
     }
 }
 
+@keyframes animateLeaf3 {
+    0% {
+        opacity: 0.3;
+        top: -10%;
+        transform: translateX(40px) rotate(0deg);
+    }
+    100% {
+        opacity: 1;
+        top: 110%;
+        transform: translateX(-40px) rotate(180deg);
+    }
+}
+
+@keyframes animateLeaf4 {
+    0% {
+        opacity: 0.3;
+        top: -10%;
+        transform: translateX(50px) rotate(0deg);
+    }
+    100% {
+        opacity: 1;
+        top: 110%;
+        transform: translateX(-50px) rotate(180deg);
+    }
+}
+
+/*blog content above leaves, z index 3*/
 .container {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none;
+    pointer-events: auto;
     z-index: 3; 
-}*/
+    /*overflow: auto;*/
+}
