--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -35,12 +35,10 @@
       <div class="cloud">
         <!--these leaf divs are used to animate the leaves for fall-->
         <!--since they are not part of conainter, the blog posts aren't affected by the animations-->
-          <div class="leaf leaf1"></div>
-          <div class="leaf leaf2"></div>
-          <div class="leaf leaf3"></div>
-          <div class="leaf leaf4"></div>
-          <div class="leaf leaf5"></div>
-          <div class="leaf leaf6"></div>
+          <div class="leaf leaf1"><div class="bird bird1"></div></div>
+          <div class="leaf leaf2"><div class="bird bird2"></div></div>
+          <div class="leaf leaf3"><div class="bird bird3"></div></div>
+          <div class="leaf leaf4"><div class="bird bird4"></div></div>
         <!--container is only used by styles.css for the basic styling. container1 does the background for summer-->
         <!--cloud has the special effects for summer and fall and winter-->
         <div class = "container">
