--- a/pages/static/fall.css
+++ b/pages/static/fall.css
@@ -19,7 +19,8 @@ header {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url(https://media.istockphoto.com/id/1616269561/vector/autumn-leaf-background.jpg?s=612x612&w=0&k=20&c=lJWl6QxCcKvyNmrjVcp7GWelM7m4QnI2J5mTrnyG2Yg=);
+    background:url(https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?cs=srgb&dl=pexels-pixabay-33109.jpg&fm=jpg);
+    /*background: url(https://media.istockphoto.com/id/1616269561/vector/autumn-leaf-background.jpg?s=612x612&w=0&k=20&c=lJWl6QxCcKvyNmrjVcp7GWelM7m4QnI2J5mTrnyG2Yg=);*/
     background-size: 100% 100%;
     overflow: hidden;
     z-index: 1; 
