--- a/pages/static/spring.css
+++ b/pages/static/spring.css
@@ -1,11 +1,3 @@
-*,
-*::before,
-*::after
-{
-  margin: 0;
-  padding: 0;
-}
-
 body {
     font-family: monaco;
     margin: 0;
@@ -24,7 +16,6 @@ body {
     background-size: 100% 100%;
     overflow: hidden;
     z-index: 1; 
-    
 }
 
 header {
@@ -33,20 +24,17 @@ header {
     padding:20px;
 }
 
-.cloud {
+/*.cloud {
     z-index:1;
-    position:relative;
     overflow:hidden;
     display:flex;
-    align-items:center;
-    justify-content: center;
-}
+}*/
 
 .bird{
     background-image:url(https://png.pngtree.com/png-vector/20240715/ourmid/pngtree-there-is-a-white-bird-flying-with-its-wings-spread-generative-png-image_13095618.png);
     background-size:cover;
-    width:100px;
-    height:100px;
+    width:250px;
+    height:250px;
     animation:flap 0.5s ease-in-out infinite;
 }
 
@@ -72,7 +60,6 @@ header {
     top:20%;
     left:-10%;
     transform:scale(0) transformX(-10vw);
-    will-change:transform;
     animation:fly-right linear infinite;
 }
 
@@ -123,5 +110,5 @@ header {
 
 @keyframes flap {
     0%, 100% { transform: scaleY(1) }
-    50% { transform: scaleY(0.8) } /* squish vertically to mimic flap */
+    50% { transform: scaleY(0.7) } 
 }
